Fixed z-index issues

--- a/client/css/global/header.import.styl
+++ b/client/css/global/header.import.styl
@@ -17,6 +17,9 @@
   z-index 2
 
 .g-header-nav-bar
+  z-index 3
+
+.g-header-nav-bar
   border-bottom 1px solid rgba(255,255,255,0.25)
 
 
